Fixed Log In button wrappin issue

--- a/src/public/app/components/SearchBar/styles.less
+++ b/src/public/app/components/SearchBar/styles.less
@@ -87,6 +87,7 @@
     font-weight: 400;
     height: 30px;
     outline: none;
+    white-space: nowrap;
     width: 60px;
   }
 
